--- a/public/maps.html
+++ b/public/maps.html
@@ -7,130 +7,145 @@
   <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet">
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
   <style>
-    html,body {height:100%;margin:0;}
+    html, body {height:100%;margin:0;}
     body {font-family:Arial,sans-serif;background:#f6f8fb;}
     #map {position:fixed;top:0;left:0;right:0;bottom:0;width:100vw;height:100vh;}
     aside {
       position:fixed;top:16px;left:16px;z-index:2;background:#fff;
       padding:12px 14px;border-radius:10px;box-shadow:0 6px 18px rgba(0,0,0,.08);
-      width:300px
+      width:300px;
     }
-    label{font-size:12px;color:#333;}
-    select{width:100%;padding:8px;border:1px solid #ccc;border-radius:6px;}
-    #panel{
+    label {font-size:12px;color:#333;}
+    select {
+      width:100%;padding:8px;border:1px solid #ccc;border-radius:6px;
+    }
+    #panel {
       position:fixed;right:16px;bottom:16px;z-index:2;background:#fff;
       padding:10px;border-radius:8px;box-shadow:0 6px 18px rgba(0,0,0,.08);
       max-height:40vh;overflow:auto;min-width:280px;
     }
-    #status{font-size:12px;color:#666;margin-top:6px;}
+    #status {font-size:12px;color:#666;margin-top:6px;}
   </style>
 </head>
 
 <body>
   <div id="map"></div>
+
   <aside>
     <div><label>Lender</label>
       <select id="lender"></select>
     </div>
     <div id="status">Loading map…</div>
   </aside>
+
   <div id="panel"><strong>Top Counties</strong><ol id="list"></ol></div>
 
   <script>
   let map;
 
-  async function geocodeCounty(name, token){
-    const url = `https://api.mapbox.com/geocoding/v5/mapbox.places/${encodeURIComponent(name + ' County, USA')}.json?limit=1&access_token=${token}`;
+  async function geocodeCounty(county, statename, token) {
+    const q = `${county} County, ${statename}, USA`;
+    const url = `https://api.mapbox.com/geocoding/v5/mapbox.places/${encodeURIComponent(q)}.json?limit=1&access_token=${token}`;
     const r = await fetch(url);
-    if(!r.ok) return null;
+    if (!r.ok) return null;
     const j = await r.json();
     const f = j.features && j.features[0];
-    return f ? f.center : null; // [lng,lat]
+    return f ? f.center : null;
   }
 
-  async function init(){
-    const status=document.getElementById('status');
+  async function init() {
+    const status = document.getElementById("status");
 
-    // token
-    const { token } = await fetch('/api/mapbox-token').then(r=>r.json()).catch(()=>({token:''}));
-    if(!token || !token.startsWith('pk.')){
-      status.textContent='Mapbox token missing or invalid.'; return;
+    // Fetch Mapbox token
+    const { token } = await fetch("/api/mapbox-token").then(r => r.json()).catch(() => ({ token: "" }));
+    if (!token || !token.startsWith("pk.")) {
+      status.textContent = "Mapbox token missing or invalid.";
+      return;
     }
 
-    // map
-    mapboxgl.accessToken=token;
-    map=new mapboxgl.Map({
-      container:'map',
-      style:'mapbox://styles/mapbox/light-v11',
-      center:[-98.5,39.8],
-      zoom:3.5
+    // Initialize Map
+    mapboxgl.accessToken = token;
+    map = new mapboxgl.Map({
+      container: "map",
+      style: "mapbox://styles/mapbox/light-v11",
+      center: [-98.5, 39.8],
+      zoom: 3.5
     });
-    map.addControl(new mapboxgl.NavigationControl(),'top-right');
-    map.on('load',()=>{status.textContent='Map loaded.';});
+    map.addControl(new mapboxgl.NavigationControl(), "top-right");
+    map.on("load", () => { status.textContent = "Map loaded."; });
 
-    // dropdown
-    const dd=document.getElementById('lender');
-    const L=await fetch('/api/maps').then(r=>r.json()).catch(()=>({lenders:[]}));
-    dd.innerHTML=(L.lenders||[]).map(name=>`<option>${name}</option>`).join('');
-    dd.addEventListener('change',()=>loadData(token));
+    // Populate lender dropdown
+    const dd = document.getElementById("lender");
+    const L = await fetch("/api/maps").then(r => r.json()).catch(() => ({ lenders: [] }));
+    dd.innerHTML = (L.lenders || []).map(name => `<option>${name}</option>`).join("");
+    dd.addEventListener("change", () => loadData(token));
     await loadData(token);
   }
 
-  async function loadData(token){
-    const lender=document.getElementById('lender').value;
-    const status=document.getElementById('status');
-    const list=document.getElementById('list');
-    status.textContent='Loading data…';
-    list.innerHTML='';
+  async function loadData(token) {
+    const lender = document.getElementById("lender").value;
+    const status = document.getElementById("status");
+    const list = document.getElementById("list");
+    status.textContent = "Loading data…";
+    list.innerHTML = "";
 
-    const res=await fetch('/api/map-data?lender='+encodeURIComponent(lender));
-    if(!res.ok){status.textContent='Error: '+(await res.text());return;}
-
-    const data=await res.json();
-    const rows=(data.rows||[]).slice(0,50);
-    status.textContent=rows.length?'Placing counties…':'No data found.';
-    list.innerHTML=rows.slice(0,20).map(r=>`<li>${r.count} — ${r.county||'(no county)'}</li>`).join('');
-
-    // geocode and build points
-    const pts=[];
-    for(const r of rows){
-      if(!r.county) continue;
-      const center=await geocodeCounty(r.county,token);
-      if(center) pts.push({
-        type:'Feature',
-        geometry:{type:'Point',coordinates:center},
-        properties:{county:r.county,count:r.count}
-      });
+    const res = await fetch("/api/map-data?lender=" + encodeURIComponent(lender));
+    if (!res.ok) {
+      status.textContent = "Error: " + (await res.text());
+      return;
     }
-    const geo={type:'FeatureCollection',features:pts};
 
-    // add or update layer
-    if(map.getSource('lender-points')){
-      map.getSource('lender-points').setData(geo);
+    const data = await res.json();
+    const rows = (data.rows || []).slice(0, 50);
+    status.textContent = rows.length ? "Placing counties…" : "No data found.";
+    list.innerHTML = rows
+      .slice(0, 20)
+      .map(r => `<li>${r.count} — ${r.county}, ${r.statename}</li>`)
+      .join("");
+
+    // Build points from county + state
+    const pts = [];
+    for (const r of rows) {
+      if (!r.county || !r.statename) continue;
+      const center = await geocodeCounty(r.county, r.statename, token);
+      if (center) {
+        pts.push({
+          type: "Feature",
+          geometry: { type: "Point", coordinates: center },
+          properties: { county: r.county, statename: r.statename, count: r.count }
+        });
+      }
+    }
+
+    const geo = { type: "FeatureCollection", features: pts };
+
+    // Add or update map layer
+    if (map.getSource("lender-points")) {
+      map.getSource("lender-points").setData(geo);
     } else {
-      map.addSource('lender-points',{type:'geojson',data:geo});
+      map.addSource("lender-points", { type: "geojson", data: geo });
       map.addLayer({
-        id:'lender-points',
-        type:'circle',
-        source:'lender-points',
-        paint:{
-          'circle-radius':['interpolate',['linear'],['get','count'],1,3,50,7,500,12],
-          'circle-color':'#0b3366',
-          'circle-opacity':0.7,
-          'circle-stroke-width':1,
-          'circle-stroke-color':'#ffffff'
+        id: "lender-points",
+        type: "circle",
+        source: "lender-points",
+        paint: {
+          "circle-radius": ["interpolate", ["linear"], ["get", "count"], 1, 3, 50, 7, 500, 12],
+          "circle-color": "#0b3366",
+          "circle-opacity": 0.7,
+          "circle-stroke-width": 1,
+          "circle-stroke-color": "#ffffff"
         }
       });
     }
 
-    // fit to bounds
-    if(pts.length){
-      const b=new mapboxgl.LngLatBounds();
-      pts.forEach(p=>b.extend(p.geometry.coordinates));
-      map.fitBounds(b,{padding:50,maxZoom:8,duration:500});
-      status.textContent='';
+    // Fit to bounds
+    if (pts.length) {
+      const b = new mapboxgl.LngLatBounds();
+      pts.forEach(p => b.extend(p.geometry.coordinates));
+      map.fitBounds(b, { padding: 50, maxZoom: 8, duration: 500 });
+      status.textContent = "";
     } else {
-      status.textContent='No mappable counties for this lender.';
+      status.textContent = "No mappable counties for this lender.";
     }
   }
 
