--- a/public/tracts.html
+++ b/public/tracts.html
@@ -6,15 +6,22 @@
 <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet">
 <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
 <style>
-  html,body{height:100%;margin:0} body{font-family:Arial,sans-serif;background:#f6f8fb}
+  html,body{height:100%;margin:0}
+  body{font-family:Arial,sans-serif;background:#f6f8fb}
   #map{position:fixed;inset:0;width:100vw;height:100vh}
-  aside{position:fixed;top:16px;left:16px;z-index:2;background:#fff;padding:12px 14px;border-radius:10px;box-shadow:0 6px 18px rgba(0,0,0,.08);width:340px}
-  label{font-size:12px;color:#333} select{width:100%;padding:8px;border:1px solid #ccc;border-radius:6px;margin-bottom:8px}
+  aside{
+    position:fixed;top:16px;left:16px;z-index:2;background:#fff;
+    padding:12px 14px;border-radius:10px;box-shadow:0 6px 18px rgba(0,0,0,.08);
+    width:340px
+  }
+  label{font-size:12px;color:#333}
+  select{width:100%;padding:8px;border:1px solid #ccc;border-radius:6px;margin-bottom:8px}
   #status{font-size:12px;color:#666;min-height:18px}
 </style>
 </head>
 <body>
 <div id="map"></div>
+
 <aside>
   <label>Lender</label>
   <select id="lender"></select>
@@ -26,7 +33,7 @@ let map;
 let counts = new Map();
 
 function colorRampExpr() {
-  // uses feature-state "value" to color tracts
+  // Color scale based on feature-state value
   return [
     'interpolate', ['linear'], ['coalesce', ['to-number', ['feature-state', 'value']], 0],
     0,  '#f0f4ff',
@@ -41,9 +48,11 @@ function colorRampExpr() {
 
 async function init(){
   const status = document.getElementById('status');
-
   const { token } = await fetch('/api/mapbox-token').then(r=>r.json()).catch(()=>({token:''}));
-  if(!token || !token.startsWith('pk.')) { status.textContent='Mapbox token missing or invalid.'; return; }
+  if(!token || !token.startsWith('pk.')) {
+    status.textContent='Mapbox token missing or invalid.';
+    return;
+  }
 
   mapboxgl.accessToken = token;
   map = new mapboxgl.Map({
@@ -52,19 +61,21 @@ async function init(){
     center:[-98.5,39.8],
     zoom:3.5
   });
-  map.addControl(new mapboxgl.NavigationControl(), 'top-right');
+  map.addControl(new mapboxgl.NavigationControl(),'top-right');
   await new Promise(res => map.once('load', res));
 
-  // add your 2024 tileset
+  // --- Add your 2024 tileset source ---
   map.addSource('tracts2024', {
     type: 'vector',
     url: 'mapbox://stuartmaps.58y5r823'
   });
+
+  // --- Add layers (fill + outline) ---
   map.addLayer({
     id:'tracts-fill',
     type:'fill',
     source:'tracts2024',
-    'source-layer':'tracts2024', /* replace if your layer name differs */
+    'source-layer':'2024-1pvgy8',   // your actual layer name
     paint:{
       'fill-color': colorRampExpr(),
       'fill-opacity': 0.75
@@ -74,17 +85,17 @@ async function init(){
     id:'tracts-outline',
     type:'line',
     source:'tracts2024',
-    'source-layer':'tracts2024',
+    'source-layer':'2024-1pvgy8',
     paint:{'line-color':'#ffffff','line-width':0.3,'line-opacity':0.6}
   });
 
-  // lender dropdown
+  // --- Populate lender dropdown ---
   const dd = document.getElementById('lender');
   const L = await fetch('/api/maps').then(r=>r.json()).catch(()=>({lenders:[]}));
   dd.innerHTML = (L.lenders||[]).map(n=>`<option>${n}</option>`).join('');
   dd.addEventListener('change', loadCounts);
 
-  await loadCounts();
+  await loadCounts(); // first load
 }
 
 async function loadCounts(){
@@ -103,9 +114,10 @@ async function loadCounts(){
 }
 
 function applyCounts(){
+  // Apply counts to map features via feature-state
   for (const [geoid, value] of counts.entries()) {
     map.setFeatureState(
-      { source: 'tracts2024', sourceLayer: 'tracts2024', id: geoid },
+      { source: 'tracts2024', sourceLayer: '2024-1pvgy8', id: geoid },
       { value }
     );
   }
