--- a/public/tracts.html
+++ b/public/tracts.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>BankMaps • Tract Choropleth (2024)</title>
+<title>BankMaps • Tract Choropleth</title>
 <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet">
 <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
 <style>
@@ -23,6 +23,13 @@
 <div id="map"></div>
 
 <aside>
+  <label>Year</label>
+  <select id="year">
+    <option value="2024" selected>2024</option>
+    <option value="2023">2023</option>
+    <option value="2022">2022</option>
+  </select>
+
   <label>Lender</label>
   <select id="lender"></select>
   <div id="status">Loading…</div>
@@ -31,6 +38,16 @@
 <script>
 let map;
 let counts = new Map();
+let currentYear = "2024";
+
+// Mapbox token and style
+const MAP_STYLE = 'mapbox://styles/stuartmaps/cmhmpa5i4000s01ql6lrwh3tk';
+
+// Define your yearly tilesets here
+const TILESETS = {
+  "2024": { id: 'tracts2024', url: 'mapbox://stuartmaps.58y5r823', layer: '2024-1pvgy8' }
+  // add more later: "2023": { id:'tracts2023', url:'mapbox://stuartmaps.xyz', layer:'2023-abcd1' }
+};
 
 function colorRampExpr() {
   return [
@@ -56,35 +73,12 @@ async function init(){
   mapboxgl.accessToken = token;
   map = new mapboxgl.Map({
     container:'map',
-    style:'mapbox://styles/stuartmaps/cmhmpa5i4000s01ql6lrwh3tk', // your custom background
+    style: MAP_STYLE,
     center:[-98.5,39.8],
     zoom:3.5
   });
   map.addControl(new mapboxgl.NavigationControl(),'top-right');
   await new Promise(res => map.once('load', res));
-
-  // --- Add your 2024 tileset ---
-  map.addSource('tracts2024', {
-    type: 'vector',
-    url: 'mapbox://stuartmaps.58y5r823'
-  });
-  map.addLayer({
-    id:'tracts-fill',
-    type:'fill',
-    source:'tracts2024',
-    'source-layer':'2024-1pvgy8',  // your tileset layer name
-    paint:{
-      'fill-color': colorRampExpr(),
-      'fill-opacity': 0.75
-    }
-  });
-  map.addLayer({
-    id:'tracts-outline',
-    type:'line',
-    source:'tracts2024',
-    'source-layer':'2024-1pvgy8',
-    paint:{'line-color':'#ffffff','line-width':0.3,'line-opacity':0.6}
-  });
 
   // --- Brightness slider ---
   const slider = document.createElement('input');
@@ -103,40 +97,74 @@ async function init(){
     map.setPaintProperty('background', 'background-opacity', parseFloat(e.target.value));
   };
 
-  // --- Lender dropdown ---
+  // --- Dropdown listeners ---
+  document.getElementById('year').addEventListener('change', async e => {
+    currentYear = e.target.value;
+    await updateTileset();
+    await loadCounts();
+  });
+
+  // --- Lenders ---
   const dd = document.getElementById('lender');
   const L = await fetch('/api/maps').then(r=>r.json()).catch(()=>({lenders:[]}));
   dd.innerHTML = (L.lenders||[]).map(n=>`<option>${n}</option>`).join('');
   dd.addEventListener('change', loadCounts);
 
-  await loadCounts(); // first load
+  await updateTileset();
+  await loadCounts();
+}
+
+async function updateTileset(){
+  const t = TILESETS[currentYear];
+  if(!t){ alert(`No tileset defined for year ${currentYear}`); return; }
+
+  // Remove any existing year layers first
+  for (const yr in TILESETS){
+    const l = TILESETS[yr];
+    if(map.getLayer(l.id+'-fill')) map.removeLayer(l.id+'-fill');
+    if(map.getLayer(l.id+'-outline')) map.removeLayer(l.id+'-outline');
+    if(map.getSource(l.id)) map.removeSource(l.id);
+  }
+
+  // Add current year's tileset
+  map.addSource(t.id, { type:'vector', url:t.url });
+  map.addLayer({
+    id: t.id+'-fill',
+    type: 'fill',
+    source: t.id,
+    'source-layer': t.layer,
+    paint:{ 'fill-color': colorRampExpr(), 'fill-opacity': 0.75 }
+  });
+  map.addLayer({
+    id: t.id+'-outline',
+    type: 'line',
+    source: t.id,
+    'source-layer': t.layer,
+    paint:{'line-color':'#ffffff','line-width':0.3,'line-opacity':0.6}
+  });
 }
 
 async function loadCounts(){
   const lender = document.getElementById('lender').value;
   const status = document.getElementById('status');
-  status.textContent = 'Loading counts…';
+  const t = TILESETS[currentYear];
+  if(!t){ status.textContent = `No tileset for ${currentYear}`; return; }
 
-  // Use Year=2024 to match your DB + GeoJSON field
-  const res = await fetch(`/api/map-data-tracts?lender=${encodeURIComponent(lender)}&year=2024`);
+  status.textContent = 'Loading counts…';
+  const res = await fetch(`/api/map-data-tracts?lender=${encodeURIComponent(lender)}&year=${currentYear}`);
   if(!res.ok){ status.textContent = 'Error: '+(await res.text()); return; }
   const data = await res.json();
-
-  // Expect GEOID instead of geoid
   counts = new Map((data.rows||[]).map(r => [String(r.geoid || r.GEOID), r.count]));
-
   status.textContent = `Loaded ${counts.size} tracts. Coloring…`;
-  applyCounts();
-  status.textContent = '';
-}
 
-function applyCounts(){
   for (const [geoid, value] of counts.entries()) {
     map.setFeatureState(
-      { source: 'tracts2024', sourceLayer: '2024-1pvgy8', id: geoid },
+      { source: t.id, sourceLayer: t.layer, id: geoid },
       { value }
     );
   }
+
+  status.textContent = '';
 }
 
 init();
