--- a/public/maps.html
+++ b/public/maps.html
@@ -1,155 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BankMaps • Map</title>
-  <link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet">
-  <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
-  <style>
-    html, body {height:100%;margin:0;}
-    body {font-family:Arial,sans-serif;background:#f6f8fb;}
-    #map {position:fixed;top:0;left:0;right:0;bottom:0;width:100vw;height:100vh;}
-    aside {
-      position:fixed;top:16px;left:16px;z-index:2;background:#fff;
-      padding:12px 14px;border-radius:10px;box-shadow:0 6px 18px rgba(0,0,0,.08);
-      width:300px;
-    }
-    label {font-size:12px;color:#333;}
-    select {
-      width:100%;padding:8px;border:1px solid #ccc;border-radius:6px;
-    }
-    #panel {
-      position:fixed;right:16px;bottom:16px;z-index:2;background:#fff;
-      padding:10px;border-radius:8px;box-shadow:0 6px 18px rgba(0,0,0,.08);
-      max-height:40vh;overflow:auto;min-width:280px;
-    }
-    #status {font-size:12px;color:#666;margin-top:6px;}
-  </style>
+<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+<title>BankMaps • Map (Tract Choropleth)</title>
+<link href="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.css" rel="stylesheet">
+<script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
+<style>
+  html,body{height:100%;margin:0}
+  body{font-family:Arial,sans-serif;background:#f6f8fb}
+  #map{position:fixed;inset:0;width:100vw;height:100vh}
+  aside{
+    position:fixed;top:16px;left:16px;z-index:2;background:#fff;
+    padding:12px 14px;border-radius:10px;box-shadow:0 6px 18px rgba(0,0,0,.08);
+    width:340px
+  }
+  label{font-size:12px;color:#333}
+  select{width:100%;padding:8px;border:1px solid #ccc;border-radius:6px;margin-bottom:8px}
+  #status{font-size:12px;color:#666;min-height:18px}
+</style>
 </head>
-
 <body>
-  <div id="map"></div>
+<div id="map"></div>
 
-  <aside>
-    <div><label>Lender</label>
-      <select id="lender"></select>
-    </div>
-    <div id="status">Loading map…</div>
-  </aside>
+<aside>
+  <label>Year</label>
+  <select id="year">
+    <option value="2024" selected>2024</option>
+    <option value="2023">2023</option>
+    <option value="2022">2022</option>
+  </select>
 
-  <div id="panel"><strong>Top Counties</strong><ol id="list"></ol></div>
+  <label>Lender</label>
+  <select id="lender"></select>
+  <div id="status">Loading…</div>
+</aside>
 
-  <script>
-  let map;
+<script>
+let map;
+let counts = new Map();
+let currentYear = "2024";
 
-  async function geocodeCounty(county, statename, token) {
-    const q = `${county} County, ${statename}, USA`;
-    const url = `https://api.mapbox.com/geocoding/v5/mapbox.places/${encodeURIComponent(q)}.json?limit=1&access_token=${token}`;
-    const r = await fetch(url);
-    if (!r.ok) return null;
-    const j = await r.json();
-    const f = j.features && j.features[0];
-    return f ? f.center : null;
+// Background style
+const MAP_STYLE = 'mapbox://styles/stuartmaps/cmhmpa5i4000s01ql6lrwh3tk';
+
+// Define yearly tilesets here
+const TILESETS = {
+  "2024": { id: 'tracts2024', url: 'mapbox://stuartmaps.58y5r823', layer: '2024-1pvgy8' }
+  // Add more later: "2023": { id:'tracts2023', url:'mapbox://stuartmaps.xyz', layer:'2023-abcd1' }
+};
+
+function colorRampExpr() {
+  return [
+    'interpolate', ['linear'], ['coalesce', ['to-number', ['feature-state', 'value']], 0],
+    0,  '#f0f4ff',
+    5,  '#c8d8ff',
+    20, '#91b4ff',
+    50, '#5f90f6',
+    100,'#2b6ce3',
+    250,'#174db6',
+    500,'#0b3366'
+  ];
+}
+
+async function init(){
+  const status = document.getElementById('status');
+  const { token } = await fetch('/api/mapbox-token').then(r=>r.json()).catch(()=>({token:''}));
+  if(!token || !token.startsWith('pk.')) {
+    status.textContent='Mapbox token missing or invalid.';
+    return;
   }
 
-  async function init() {
-    const status = document.getElementById("status");
+  mapboxgl.accessToken = token;
+  map = new mapboxgl.Map({
+    container:'map',
+    style: MAP_STYLE,
+    center:[-98.5,39.8],
+    zoom:3.5
+  });
+  map.addControl(new mapboxgl.NavigationControl(),'top-right');
+  await new Promise(res => map.once('load', res));
 
-    // Fetch Mapbox token
-    const { token } = await fetch("/api/mapbox-token").then(r => r.json()).catch(() => ({ token: "" }));
-    if (!token || !token.startsWith("pk.")) {
-      status.textContent = "Mapbox token missing or invalid.";
-      return;
-    }
+  // Brightness slider
+  const slider = document.createElement('input');
+  slider.type = 'range';
+  slider.min = 0;
+  slider.max = 1;
+  slider.step = 0.05;
+  slider.value = 0.8;
+  slider.style.position = 'fixed';
+  slider.style.top = '16px';
+  slider.style.right = '16px';
+  slider.style.zIndex = '10';
+  slider.title = 'Background brightness';
+  document.body.appendChild(slider);
+  slider.oninput = e => {
+    map.setPaintProperty('background', 'background-opacity', parseFloat(e.target.value));
+  };
 
-    // Initialize Map
-    mapboxgl.accessToken = token;
-    map = new mapboxgl.Map({
-      container: "map",
-      style: "mapbox://styles/mapbox/light-v11",
-      center: [-98.5, 39.8],
-      zoom: 3.5
-    });
-    map.addControl(new mapboxgl.NavigationControl(), "top-right");
-    map.on("load", () => { status.textContent = "Map loaded."; });
+  document.getElementById('year').addEventListener('change', async e => {
+    currentYear = e.target.value;
+    await updateTileset();
+    await loadCounts();
+  });
 
-    // Populate lender dropdown
-    const dd = document.getElementById("lender");
-    const L = await fetch("/api/maps").then(r => r.json()).catch(() => ({ lenders: [] }));
-    dd.innerHTML = (L.lenders || []).map(name => `<option>${name}</option>`).join("");
-    dd.addEventListener("change", () => loadData(token));
-    await loadData(token);
+  const dd = document.getElementById('lender');
+  const L = await fetch('/api/maps').then(r=>r.json()).catch(()=>({lenders:[]}));
+  dd.innerHTML = (L.lenders||[]).map(n=>`<option>${n}</option>`).join('');
+  dd.addEventListener('change', loadCounts);
+
+  await updateTileset();
+  await loadCounts();
+}
+
+async function updateTileset(){
+  const t = TILESETS[currentYear];
+  if(!t){ alert(`No tileset defined for year ${currentYear}`); return; }
+
+  for (const yr in TILESETS){
+    const l = TILESETS[yr];
+    if(map.getLayer(l.id+'-fill')) map.removeLayer(l.id+'-fill');
+    if(map.getLayer(l.id+'-outline')) map.removeLayer(l.id+'-outline');
+    if(map.getSource(l.id)) map.removeSource(l.id);
   }
 
-  async function loadData(token) {
-    const lender = document.getElementById("lender").value;
-    const status = document.getElementById("status");
-    const list = document.getElementById("list");
-    status.textContent = "Loading data…";
-    list.innerHTML = "";
+  map.addSource(t.id, { type:'vector', url:t.url });
+  map.addLayer({
+    id: t.id+'-fill',
+    type: 'fill',
+    source: t.id,
+    'source-layer': t.layer,
+    paint:{ 'fill-color': colorRampExpr(), 'fill-opacity': 0.75 }
+  });
+  map.addLayer({
+    id: t.id+'-outline',
+    type: 'line',
+    source: t.id,
+    'source-layer': t.layer,
+    paint:{'line-color':'#ffffff','line-width':0.3,'line-opacity':0.6}
+  });
+}
 
-    const res = await fetch("/api/map-data?lender=" + encodeURIComponent(lender));
-    if (!res.ok) {
-      status.textContent = "Error: " + (await res.text());
-      return;
-    }
+async function loadCounts(){
+  const lender = document.getElementById('lender').value;
+  const status = document.getElementById('status');
+  const t = TILESETS[currentYear];
+  if(!t){ status.textContent = `No tileset for ${currentYear}`; return; }
 
-    const data = await res.json();
-    const rows = (data.rows || []).slice(0, 50);
-    status.textContent = rows.length ? "Placing counties…" : "No data found.";
-    list.innerHTML = rows
-      .slice(0, 20)
-      .map(r => `<li>${r.count} — ${r.county}, ${r.statename}</li>`)
-      .join("");
+  status.textContent = 'Loading counts…';
+  const res = await fetch(`/api/map-data-tracts?lender=${encodeURIComponent(lender)}&year=${currentYear}`);
+  if(!res.ok){ status.textContent = 'Error: '+(await res.text()); return; }
+  const data = await res.json();
+  counts = new Map((data.rows||[]).map(r => [String(r.geoid || r.GEOID), r.count]));
+  status.textContent = `Loaded ${counts.size} tracts. Coloring…`;
 
-    // Build points from county + state
-    const pts = [];
-    for (const r of rows) {
-      if (!r.county || !r.statename) continue;
-      const center = await geocodeCounty(r.county, r.statename, token);
-      if (center) {
-        pts.push({
-          type: "Feature",
-          geometry: { type: "Point", coordinates: center },
-          properties: { county: r.county, statename: r.statename, count: r.count }
-        });
-      }
-    }
-
-    const geo = { type: "FeatureCollection", features: pts };
-
-    // Add or update map layer
-    if (map.getSource("lender-points")) {
-      map.getSource("lender-points").setData(geo);
-    } else {
-      map.addSource("lender-points", { type: "geojson", data: geo });
-      map.addLayer({
-        id: "lender-points",
-        type: "circle",
-        source: "lender-points",
-        paint: {
-          "circle-radius": ["interpolate", ["linear"], ["get", "count"], 1, 3, 50, 7, 500, 12],
-          "circle-color": "#0b3366",
-          "circle-opacity": 0.7,
-          "circle-stroke-width": 1,
-          "circle-stroke-color": "#ffffff"
-        }
-      });
-    }
-
-    // Fit to bounds
-    if (pts.length) {
-      const b = new mapboxgl.LngLatBounds();
-      pts.forEach(p => b.extend(p.geometry.coordinates));
-      map.fitBounds(b, { padding: 50, maxZoom: 8, duration: 500 });
-      status.textContent = "";
-    } else {
-      status.textContent = "No mappable counties for this lender.";
-    }
+  for (const [geoid, value] of counts.entries()) {
+    map.setFeatureState(
+      { source: t.id, sourceLayer: t.layer, id: geoid },
+      { value }
+    );
   }
 
-  init();
-  </script>
+  status.textContent = '';
+}
+
+init();
+</script>
 </body>
 </html>
